fix contact form again

--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
     <div class="hero5">
         <div class="container">
             <h1>I want to hear from you!</h1>
-            <form action="http://formspree.io/lenhausen14@gmail.com">
+            <form action="http://formspree.io/lenhausen14@gmail.com" method="post">
                 <label class="required" for="email">Your email:</label></br>
-                <input type="email" name="_replyto"> </br></br>
+                <input type="email" id ="email" name="_replyto"> </br></br>
                 
                 <label for="message">Your message:</label>
                 <textarea   name="body"></textarea>
