--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <div class="container">
             <h1>I want to hear from you!</h1>
             <form
-            action="https://formspree.io/f/mvonobyz"
+            action="https://formspree.io/f/xjvdvdze"
             method="POST">
         
                 <label for="fname">First Name:</label>
