update about venues

--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
 
                                 At her core, she is a performer. Her journey as an artist started as singing and 
                                 writing alone in her bedroom, and eventually led her to venues like 
-                                <u><a href="https://theark.org/" target="_blank">The Ark</a></u> and 
-                                <u><a href="http://thegardendetroit.com/" target="_blank">The Garden Theater</a></u>.<br><br>
+                                <u><a href="https://theark.org/" target="_blank">The Ark</a></u>, <u><a href="https://blindpigmusic.com/" target="_blank">The Blind Pig</a></u>,
+                                and <u><a href="http://thegardendetroit.com/" target="_blank">The Garden Theater</a></u>.<br><br>
                         
                                 Artist, educator, and operations manager at Georgia Rose Farm, she is proud of the many hats 
                                 she wears. In recent years she has discovered her passion for health education, and 
