--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JJ HoneyQueen</title>
+    <title>JJ HoneyQueen734</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/JJHQlogo.png">
     <script src="https://kit.fontawesome.com/94c6583cfa.js" crossorigin="anonymous"></script>
