update web design link

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 </div>
-    <div class="promo">Web Design by <a href="https://mlenhausen.github.io/madelinelenhausen/personal.html" target="_blank">MadHauseMedia</a></div>
+    <div class="promo">Web Design by <a href="https://madhausemedia.com" target="_blank">MadHause Media</a></div>
 
     <div class="footer">
         <ul class="social">
